Please note that this version is marked "unstable", meaning it can be broken from time
to time. Do at least check the changelog for relevant info before using it.

2.2.0 25.01.2026:
*Sibling files with same base name are now moved/renamed together with main file.

2.1.1 25.01.2026:
*Fixed Rules tab Save button not persisting changes to disk.
*Fixed quote parsing in rule names - quotes at end of strings are now properly stripped.
*Fixed config directory not being created automatically on save.

2.1.0 25.01.2026:
*Fixed Apply Rules context menu not working due to quote parsing bug.
*Apply Rules now works regardless of auto-rename setting (manual invocation bypasses checkbox).
*Default rename rule updated to: '%ann (%yea) - %enr - %epn [%src-%res][%aud][%dub][%vid]-%grp'

2.0.2 17.01.2026:
*Moved configuration from ~/.webaom to ~/.config/webaom/ (Linux), ~/Library/Application Support/webaom/ (macOS), %APPDATA%\webaom\ (Windows). Existing config is migrated automatically.

2.0.1 16.01.2026:
*Added AppImage packaging for Linux.

2.0.0 01.12.2025:
*First public release of the modernized WebAOM.
*Added "Load completed" checkbox in Anime panel to reload completed jobs from the database.
*Added native app packages for macOS (.dmg), Windows (.msi), and Linux (.deb).
*Improved MD5 hashing performance by 70% using JDK intrinsics.
*Improved TTH (Tiger Tree Hash) memory efficiency with stack-based algorithm.
*Added automatic switch to Jobs panel when adding files.
*Added Delete/Backspace keyboard shortcut to remove jobs from list.
*Added application window icon for taskbar/dock.
*Added ⌘R keyboard shortcut for refresh on macOS (F5 still works).
*Added automatic embedded database support (SQLite). If PostgreSQL/MySQL is unavailable, WebAOM will now use an embedded database automatically.
*Added "Auto rename" option to disable automatic file renaming after identification.
*Added startup validation that shows helpful messages if there are configuration issues.